<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_Gray"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.checkin.maceducation.checkinapplication.ActivityDetailsActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_weight="9"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/btnSaveActivity">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="2">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView95"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strSaveActivity"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/lbl_Blue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView193"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strBitcoin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/lbl_Blue"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:id="@+id/spnActivity" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView952"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strSubject"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/lbl_Blue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView1932"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strBitcoin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/lbl_Blue"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:id="@+id/spnSubject" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView5s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strContractName"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/lbl_Blue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView121"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strBitcoin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/lbl_Blue"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtActivityContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="50"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView5213"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strContractPosition"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/lbl_Blue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strBitcoin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/lbl_Blue"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtActivityContractPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="50"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView5sq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strContractEmail"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/lbl_Blue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView1qwe2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strBitcoin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/lbl_Blue"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtActivityContractEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="50"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strContractTel"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/lbl_Blue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strBitcoin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/lbl_Blue"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtActivityContactTel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="50"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView911"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:text="@string/title_activity_activity_details"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/lbl_Blue"
                android:textStyle="bold" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edtActivityRemark"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_span="3"
                android:ems="20"
                android:inputType="textMultiLine" />
        </TableRow>
    </TableLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_btn_BlackGray"
        android:textColor="@color/lbl_Write"
        android:onClick="Click_SaveActivity"
        android:textStyle="bold"
        android:text="@string/strSaveActivity"
        android:id="@+id/btnSaveActivity"
        android:layout_weight="1"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
